Bugzilla #698: added JVM memory settings to be able to handle large objects